--- a/app/app.css
+++ b/app/app.css
@@ -8,7 +8,7 @@
 
 html,
 body {
-  @apply bg-white dark:bg-gray-950;
+  @apply bg-purple-500 dark:bg-purple-900;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
